--- a/app/views/configuration/index.html.erb
+++ b/app/views/configuration/index.html.erb
@@ -1,7 +1,5 @@
 <% content_for :navigation do %>
-  <li class="active"><a href="#">Start</a></li>
-  <li><a href="#">Create User</a></li>
-  <li><a href="#">Configure the application</a></li>
+  <%= installation_navigation_bar("active", "", "") %>
 <% end %>
 
 <% content_for :body do %>
@@ -9,7 +7,7 @@
   <h1 class="cover-heading"><%= @title %></h1>
   <p class="lead">The first time you run Imaginatio Shopcart you will be prompted to create an administration user and to set up some small details about your application.</p>
   <p class="lead">
-    <a href="#" class="btn btn-lg btn-default">Get Started</a>
+    <%= link_to "Create User", :installation_step_one, class: "btn btn-lg btn-default" %>
   </p>
 
 <% end %>
