--- a/app/views/layouts/static_page.html.erb
+++ b/app/views/layouts/static_page.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title><%= raw @static_page.title%></title>
+  <title><%= full_title(raw @static_page.title) %></title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
