--- a/app/views/configuration/new_user.html.erb
+++ b/app/views/configuration/new_user.html.erb
@@ -5,11 +5,12 @@
 <% content_for :body do %>
 
   <h1 class="cover-heading"><%= @title %></h1>
-  <form class="form-signin" role="form">
-    <input type="email" name="email" id="email" class="form-control" placeholder="Email address" required="required" autofocus="">
-    <input type="password" name="password" id="password" class="form-control" placeholder="Password" required="required">
-    <input type="password" name="confirmation" id="confirmation" class="form-control" placeholder="Password Confirmation" required="required">
+  <%= form_for @superAdministrator, :html => { class: "form-signin", role: "form" } do  |form|  %>
+    <%= form.email_field :email, class: "form-control", placeholder: "Email address" %>
+    <%= form.password_field :password, class: "form-control", placeholder: "Password" %>
+    <%= form.password_field :confirmation, class: "form-control", placeholder: "Confirmation" %>
+    
     <button class="btn btn-lg btn-default" type="submit">Create User</button>
-  </form>
+  <% end %>
 
 <% end %>
