--- a/app/assets/stylesheets/cover.css
+++ b/app/assets/stylesheets/cover.css
@@ -29,11 +29,17 @@ body {
   height: 100%;
   background-color: #333;
 }
+
 body {
   color: #fff;
   text-align: center;
   text-shadow: 0 1px 3px rgba(0,0,0,.5);
   box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+}
+
+/* Dont want shadows for my alert divs */
+.alert {
+  text-shadow: none; /* Prevent inheritence from `body` */
 }
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
