--- a/app/views/administrators/new.html.erb
+++ b/app/views/administrators/new.html.erb
@@ -6,14 +6,7 @@
   <div id="new_administrator">
     <h1 class="cover-heading"><%= @title %></h1>
     <% if !@administrator.errors.empty? %>
-        <div class="alert alert-danger alert-dismissable">
-          <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-          <p><strong>Warning!</strong> There have been some errors you need to fix.</p>
-          <% @administrator.errors.full_messages.each do |error| %>
-            <p><%= error %></p>
-          <% end %>
-          
-        </div>
+        <%= error_messages("Warning!", "There have been some errors you need to fix.", @administrator) %>
     <% end %>
     <%= form_for @administrator, :html => { class: "form-signin", role: "form" } do  |form|  %>
       <%= form.email_field :email, class: "form-control", placeholder: "Email address" %>
