--- a/app/assets/stylesheets/create_user.css
+++ b/app/assets/stylesheets/create_user.css
@@ -29,9 +29,9 @@
   margin-bottom: 10px;
 }
 
-.field_with_errors .form-control {
+.field_with_errors .form-control, input.field_with_errors {
   border-color: #843534;
   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 6px #ce8483;
-  box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 6px #ce8483;
-  background-color: #f2dede;
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 6px #e4baba;
+  /* background-color: #f2dede;*/
 }
