--- a/app/assets/stylesheets/create_user.css
+++ b/app/assets/stylesheets/create_user.css
@@ -22,12 +22,10 @@
 .form-signin .form-control:focus {
   z-index: 2;
 }
-.form-signin input[type="email"] {
+.form-signin input[type="email"], .form-signin input[type="password"] , .form-signin input  {
   margin-bottom: 10px;
 }
-.form-signin input[type="password"] {
-  margin-bottom: 10px;
-}
+
 
 .field_with_errors .form-control, input.field_with_errors {
   border-color: #843534;
