--- a/app/assets/stylesheets/footer.css
+++ b/app/assets/stylesheets/footer.css
@@ -4,5 +4,5 @@
   width: 100%;
   /* Set the fixed height of the footer here */
   height: 300px;
-  background-color: #f5f5f5;
+  background-color: #333333; /*#f5f5f5;*/
 }
