--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title><%= full_title(@title) %></title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+  <%= stylesheet_link_tag    "home", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,10 +13,13 @@
     
     <%= render partial: "layouts/application/navbar" %>
 
+    <%= render partial: "layouts/application/carousel" %>
+
 
     <div class="container marketing">
-      <%= yield :body %>
+      <%= yield %>
     
+
     </div><!-- /.container -->
     <%= render partial: "layouts/application/footer" %>
 </body>
