--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,25 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<% content_for :body do %>
+  <div id="new_user">
+    <h1 class="cover-heading"><%= @title %></h1>
+    <% if !@user.errors.empty? %>
+      <%= error_messages("Warning!", "There have been some errors you need to fix.", @user) %>
+    <% end %>
+    <%= form_for @user, :html => { class: "form-signin", role: "form" } do  |form|  %>
+
+      <label for="name">Nombre</label>
+      <%= attribute_tag(@user, :name, params = {form: form, placeholder: "Nombre", type: "text", class: "form-control", validations: :all}) %>
+      
+      <label for="email">Email</label>
+      <%= attribute_tag(@user, :email, params = {form: form, placeholder: "Email", type: "email", class: "form-control", validations: :all}) %>
+      
+      <label for="password">Contraseña</label>
+      <%= attribute_tag(@user, :password, params = {form: form, placeholder: "Contraseña", type: "password", class: "form-control", validations: :all}) %>
+      
+      <label for="password_confirmation">Confirmacion</label>
+      <%= attribute_tag(@user, :password_confirmation, params = {form: form, placeholder: "Confirmacion", type: "password", class: "form-control", validations: :all}) %>
+      
+      <%= form.submit "Crear mi cuenta", class: "btn btn-lg btn-primary" %>
+
+    <% end %>
+  </div>
+<% end %>
