--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,8 @@
 
 
     <div class="container marketing">
+      <%= render partial: "shared/flash" %>
+      
       <%= yield :body %>
     
     </div><!-- /.container -->
