login and logout ready

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,6 @@
-<%= image_tag @user.avatar_url(:big).to_s %>
-<p>
-<%= @user.name %>, <%= @user.email %>
-</p>
+<% content_for :body do %>
+  <%= image_tag @user.avatar_url(:big).to_s %>
+  <p>
+    <%= @user.name %>, <%= @user.email %>
+  </p>
+<% end %>
