--- a/app/views/layouts/application/_navbar.html.erb
+++ b/app/views/layouts/application/_navbar.html.erb
@@ -8,6 +8,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="<%= root_path %>"><%= @configuration.name %></a>
         </div>
@@ -16,7 +17,22 @@
             <li class="active"><a href="<%= root_path %>">Inicio</a></li>
             <li><a href="#about">Quienes somos</a></li>
             <li><a href="#contact">Contactenos</a></li>
-            </li>
+            <% if signed_in? %>
+              <li id="fat-menu" class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                  Cuenta <b class="caret"></b>
+                </a>
+                <ul class="dropdown-menu">
+                  <li><%= link_to "Perfil", current_user %></li>
+                  <li class="divider"></li>
+                  <li>
+                    <%= link_to "Cerrar Sesión", signout_path, method: "delete" %>
+                  </li>
+                </ul>
+              </li>
+            <% else %>
+              <li><%= link_to "Ingresar", signin_path %></li>
+            <% end %>
           </ul>
         </div>
       </div>
