--- a/app/views/layouts/application/_navbar.html.erb
+++ b/app/views/layouts/application/_navbar.html.erb
@@ -23,7 +23,7 @@
                   Cuenta <b class="caret"></b>
                 </a>
                 <ul class="dropdown-menu">
-                  <li><%= link_to "Perfil", current_user %></li>
+                  <li><%= link_to "Perfil", profile_path %></li>
                   <li class="divider"></li>
                   <li>
                     <%= link_to "Cerrar Sesión", signout_path, method: "delete" %>
