--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,9 @@
 <% content_for :body do %>
+  <h1>Perfil del Usuario</h1>
   <%= image_tag @user.avatar_url(:big).to_s %>
   <p>
     <%= @user.name %>, <%= @user.email %>
   </p>
+  <p><%= link_to "Editar datos", edit_user_path(@user), id: "editar" %></p>
+  <p><%= link_to "Cambiar Contraseña", edit_password_path, id: "edit_password" %></p>
 <% end %>
