--- a/app/views/layouts/administration.html.erb
+++ b/app/views/layouts/administration.html.erb
@@ -36,5 +36,12 @@
     </div>
   </div>
 
+  <script>
+    $(document).ready(function()    
+    {
+      var Offset = $('body').offset();
+      $('body').offset(Offset);
+    });
+  </script>
 </body>
 </html>
