--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,5 +21,12 @@
     
     </div><!-- /.container -->
     <%= render partial: "layouts/application/footer" %>
+    <script>
+      $(document).ready(function()    
+      {
+        var Offset = $('body').offset();
+        $('body').offset(Offset);
+      });
+    </script>
 </body>
 </html>
