--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,7 +1,9 @@
 <% if !flash.empty? %>
   <div class="container">
     <% flash.each do |key, value| %>
-      <div class="alert alert-<%= key %>"><%= value %></div>
+      <% alert_class = key.to_s %>
+      <% alert_class = "info" if alert_class == "notice" %>
+      <div class="alert alert-<%= alert_class %>"><%= value %></div>
     <% end %>
   </div>
 <% end %>
