--- a/app/views/administrators/new.html.erb
+++ b/app/views/administrators/new.html.erb
@@ -14,6 +14,8 @@
       <%= attribute_tag(@administrator, :password, params = {form: form, placeholder: "Password", type: "password", class: "form-control", validations: :all}) %>
       
       <%= attribute_tag(@administrator, :confirmation, params = {form: form, placeholder: "confirmation", type: "password", class: "form-control", validations: :all}) %>
+
+      <%= attribute_tag( @administrator, :numero, params = {form: form, placeholder: "Número", type: "text", class: "form-control", validations: :nonajax} ) %>
       
       <button class="btn btn-lg btn-default" type="submit">Create User</button>
     <% end %>
