--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,6 +5,8 @@
       <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
         <h1 class="page-header"><%= @title %></h1>
 
+        <%= render partial: 'search',locals: { users: @users } %>
+        
         <%= render partial: 'users',locals: { users: @users } %>
 
       </div>
