--- a/app/views/administrators/_main_side_bar.html.erb
+++ b/app/views/administrators/_main_side_bar.html.erb
@@ -12,5 +12,7 @@
     <li class="<%= 'active' if active == 'user' %>"><a href="<%= users_path %>">Usuarios</a></li>
     <li class="<%= 'active' if active == 'mail' %>"><a href="">Publicidad por Mail</a></li>
     <li class="<%= 'active' if active == 'report' %>"><a href="">Estadisticas</a></li>
+    <li class="<%= 'active' if active == 'configuration' %>"><a href="<%= configuration_path %>">Configuracion</a></li>
+    <li class="<%= 'active' if active == 'services' %>"><a href="">Servicios</a></li>
   </ul>
 </div>
