--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -6,6 +6,26 @@ $grayMediumLight: #eaeaea;
   box-sizing: border-box;
 }
 
+
+
+
+.navbar {
+  min-height: 50px;
+}
+
+.navbar-brand {
+  padding: 0 30px 0 15px;
+}
+
+
+@media only screen and (max-width: 767px) {
+
+  .navbar-brand {
+    padding: 5px 15px !important;
+  }
+
+}
+
 /* miscellaneous */
 
 .debug_dump {
