--- a/app/views/layouts/desktop/_header.html.erb
+++ b/app/views/layouts/desktop/_header.html.erb
@@ -7,7 +7,12 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="<%= root_path %>"><%= @configuration.title %></a>
+      <% if @configuration.logo? %>
+        <a class="navbar-brand" href="<%= root_path %>"><%= image_tag @configuration.logo_url(:icon).to_s %></a>
+        
+      <% else %>
+        <a class="navbar-brand" href="<%= root_path %>"><%= @configuration.title %></a>
+      <% end %>
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
