--- a/app/assets/stylesheets/create_user.css
+++ b/app/assets/stylesheets/create_user.css
@@ -22,7 +22,8 @@
 .form-signin .form-control:focus {
   z-index: 2;
 }
-.form-signin input[type="email"], .form-signin input[type="password"] , .form-signin input  {
+
+.form-signin input, .form-signin select  {
   margin-bottom: 10px;
 }
 
