--- a/app/assets/stylesheets/custom_desktop.css.scss
+++ b/app/assets/stylesheets/custom_desktop.css.scss
@@ -2,10 +2,8 @@
   padding: 0 30px 0 15px;
 }
 
-@media only screen and (max-width: 767px) {
-
-  .navbar-brand {
-    padding: 0px 15px !important;
-  }
-
+.marketing {
+  margin-bottom: 10px
 }
+
+
