--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -1,15 +1,10 @@
+<% provide(:title, @title ) %>
+<% provide(:active, 'services' ) %>
+
 <% content_for :body do %>
-  <div class="container-fluid">
-    <div class="row">
-      <%= render partial: '/administrators/main_side_bar', locals: { active: 'services' } %>
-      <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-        <h1 class="page-header"><%= @title %></h1>
 
-        <%= render partial: 'search',locals: { services: @services } %>
-        
-        <%= render partial: 'services',locals: { services: @services } %>
+  <%= render partial: 'search',locals: { services: @services } %>
 
-      </div>
-    </div>
-  </div>
+  <%= render partial: 'services',locals: { services: @services } %>
+
 <% end %>
