--- a/app/views/users/_users.html.erb
+++ b/app/views/users/_users.html.erb
@@ -2,18 +2,28 @@
 <%= will_paginate %>
 
 <div class="table-responsive">
-  <table class="table table-striped">
+  <table class="table table-striped table-hover">
     <thead>
       <tr>
+        <th>Acciones</th>
         <th>#</th>
         <th>Nombre</th>
         <th>Email</th>
-        <th>Acciones</th>
       </tr>
     </thead>
     <tbody>
       <% users.each do |user| %>
-        <tr>          
+        <tr>
+          <td>
+            <a href="<%= user_path(user) %>" class="btn btn-default btn-default"><span class="glyphicon glyphicon-search"></span></a>
+            <a href="#"  class="btn btn-default btn-default"><span class="glyphicon glyphicon-inbox"></span></a>
+            <a href="#"  class="btn btn-default btn-default"><span class="glyphicon glyphicon-usd"></span></a>
+            <% if user.active %>
+              <a data-confirm="Seguro que desea eliminar al usuario?" class="btn btn-default btn-default" data-method="delete" href="<%= user_path(user) %>" rel="nofollow"><span class="glyphicon glyphicon-remove-sign"></span></a>
+            <% else %>
+              <a data-confirm="Seguro que desea activar al usuario?" class="btn btn-default btn-default" data-method="patch" href="<%= activate_user_path(user) %>" rel="nofollow"><span class="glyphicon glyphicon-flash"></span></a>
+            <% end %>
+          </td>
           <td> 
             <% if user.avatar? %>
               <%= image_tag user.avatar_url(:icon).to_s %> 
@@ -23,17 +33,7 @@
           </td>
           <td><%=user.name %></td>
           <td><%=user.email %></td>
-          <td>
-            <a href="<%= user_path(user) %>" class="btn btn-default btn-default"><span class="glyphicon glyphicon-search"></span></a>
-            <a href="<%= edit_user_path(user) %>"  class="btn btn-default btn-default"><span class="glyphicon glyphicon-pencil"></span></a>
-            <a href="#"  class="btn btn-default btn-default"><span class="glyphicon glyphicon-inbox"></span></a>
-            <a href="#"  class="btn btn-default btn-default"><span class="glyphicon glyphicon-usd"></span></a>
-            <% if user.active %>
-              <a data-confirm="Seguro que desea eliminar al usuario?" class="btn btn-default btn-default" data-method="delete" href="<%= user_path(user) %>" rel="nofollow"><span class="glyphicon glyphicon-remove-sign"></span></a>
-            <% else %>
-              <a data-confirm="Seguro que desea activar al usuario?" class="btn btn-default btn-default" data-method="patch" href="<%= activate_user_path(user) %>" rel="nofollow"><span class="glyphicon glyphicon-flash"></span></a>
-            <% end %>
-          </td>
+          
         </tr>
       <% end %>
     </tbody>
