object alpha state

--- a/app/views/administrators/_main_side_bar.html.erb
+++ b/app/views/administrators/_main_side_bar.html.erb
@@ -14,5 +14,7 @@
     <li class="<%= 'active' if active == 'report' %>"><a href="">Estadisticas</a></li>
     <li class="<%= 'active' if active == 'configuration' %>"><a href="<%= configuration_path %>">Configuracion</a></li>
     <li class="<%= 'active' if active == 'services' %>"><a href="<%= services_path%>">Servicios</a></li>
+    <li class="<%= 'active' if active == 'items' %>"><a href="<%= items_path%>">Items</a></li>
+    <li class="<%= 'active' if active == 'fieldTypes' %>"><a href="<%= field_types_path%>">Tipos de Campo</a></li>
   </ul>
 </div>
