--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,7 +1,7 @@
 @import "bootstrap";
 @import "carousel.css";
 @import "footer.css";
-@import "custom.css.scss";
+@import "custom.css";
 @import "application_layout.css.scss";
 @import "create_user.css";
 @import "forms.css";
