--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
       <%= yield :body %>
     
     </div><!-- /.container -->
-    <%= render partial: "layouts/application/footer" %>
+    <%= render partial: "layouts/application/footer", locals: {config: @configuration} %>
     <script>
       $(document).ready(function()    
       {
