--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<%= render partial: "/pages/promotions" %>
+<h1><%= @configuration.name %> le recomienda leer</h1>
 
 <%= render partial: "/pages/recommended", locals: {books: @books} %>
 
