--- a/app/views/item_instances/_lines_search.html.erb
+++ b/app/views/item_instances/_lines_search.html.erb
@@ -1,11 +1,10 @@
 <form role="form" action="<%= products_path(item.name) %>" method="get">
-  <% fields.each do |field| %>
     <div class="row">
       <div class='form-group col-sm-6 col-md-6 col-lg-6'>
-        <%= raw create_search_field(field, value: params[field.name.to_sym]) %>
+        <label for='search'>Texto de busqueda</label>
+        <%= text_field_tag :search, params[:search], class: 'form-control' %>
       </div>
-    </div>    
-  <% end %>
+    </div>
   <div class="row">
     <div class='form-group col-sm-6 col-md-6 col-lg-6'>
       <div class="checkbox">
