--- a/app/views/layouts/application/_carousel.html.erb
+++ b/app/views/layouts/application/_carousel.html.erb
@@ -8,8 +8,8 @@
     <li data-target="#myCarousel" data-slide-to="2" class=""></li>
   </ol>
   <div class="carousel-inner">
-    <div class="item">
-      <img alt="First slide" src="<%= asset_path 'slide1.jpg' %>">
+    <div class="item slide1">
+      
       <div class="container">
         <div class="carousel-caption">
           <h1>Registrese como usuario</h1>
@@ -21,8 +21,8 @@
         </div>
       </div>
     </div>
-    <div class="item active">
-      <img alt="Second slide" src="<%= asset_path 'slide2.png' %>">
+    <div class="item active slide2">
+      
       <div class="container">
         <div class="carousel-caption">
           <h1>Another example headline.</h1>
@@ -31,8 +31,8 @@
         </div>
       </div>
     </div>
-    <div class="item">
-      <img alt="Third slide" src="<%= asset_path 'slide3.jpg' %>">
+    <div class="item slide3">
+      
       <div class="container">
         <div class="carousel-caption">
           <h1>One more for good measure.</h1>
